--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <title>MyDocument</title>
+    <title>WebStudio</title>
     
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body class="body">
-    <!-- Header[Top Line] ------->
+    <!-- =============   Header[Top Line]   ============== -->
     <header class="header">
         <div class="bordering">
             <!-- Navigation -->
@@ -144,7 +144,7 @@
             
         </section>
     </main>
-    <!-- ---------Footer--------->
+   <!-- ==============   Footer   ============== -->
     <footer class="footer">
         <div class="bordering">
         <!-- logo -->
