--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="nav">
             <!-- logo -->
             <div class="header-logo">
-                <a class="link logo" lang="en" href="./index.html">
+                <a class="link logo-font" lang="en" href="./index.html">
                     <span class="logo-blue">Web</span>Studio
                 </a>
             </div>
@@ -149,7 +149,7 @@
         <div class="bordering">
         <!-- logo -->
             <div class="footer-logo">
-                <a class="link logo" lang="en" href="./index.html">
+                <a class="link logo-font" lang="en" href="./index.html">
                     <span class="logo-blue">Web</span>Studio
                 </a>
             </div>
