fix mentor's remarks

--- a/index.html
+++ b/index.html
@@ -52,16 +52,14 @@
         </div>
     <!-- End of Header [Top line] -->
     </header>
-    <main>
+    <main class="main studio">
         <!-- Hero Section  -->
         <section class="hero">
             <div class="bordering">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса
                 </h1>
                 <!-- Button -->
-                <button type="button" class="hero-button">
-                    Заказать услугу
-                </button>
+                <button type="button" class="hero-button">Заказать услугу</button>
             </div>
         <!-- End of Hero Section -->
         </section>
