--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
         </div>
         <!-- End of Header [Top line] -->
     </header>
-    <main class="main">
+    <main class="main portfolio">
 
         <!--Наши проекты и услуги-->
         <section class="section projects">
@@ -82,7 +82,7 @@
                     <div class="item-box">
                         <a class="link"href="">
                             <img src="./images/portfolio1.jpg" alt="Технокоманда" width="368" />
-                            <h3>Технокряк</h3>
+                            <h2>Технокряк</h2>
                             <p>Веб-сайт</p>
                         </a>
                     </div>
@@ -91,7 +91,7 @@
                     <div class="item-box">
                         <a class="link" href="">
                             <img src="./images/portfolio2.jpg" alt="Постер" width="368"/>
-                            <h3>Постер New Orlean vs Golden Star</h3>
+                            <h2>Постер New Orlean vs Golden Star</h2>
                             <p>Дизайн</p>
                         </a>
                     </div>
@@ -100,7 +100,7 @@
                     <div class="item-box">
                         <a class="link" href="">
                             <img src="./images/portfolio3.jpg"alt="Визитная карточка ресторана Seafoot" width="368"/>
-                            <h3> Ресторан Seafoot</h3>
+                            <h2> Ресторан Seafoot</h2>
                             <p>Приложение</p>
                         </a>
                     </div>
@@ -110,7 +110,7 @@
                         <a class="link" href="">
                             <img src="./images/portfolio4.jpg"
                         alt="Наушники" width="368"/>
-                            <h3>Проект Prime</h3>
+                            <h2>Проект Prime</h2>
                             <p>Маркетинг</p>
                         </a>
                     </div>
@@ -120,7 +120,7 @@
                         <a class="link" href="">
                             <img src="./images/portfolio5.jpg"
                         alt="Коробочные решения" width="368"/>
-                            <h3>Проект Boxes</h3>
+                            <h2>Проект Boxes</h2>
                             <p>Приложение</p>
                         </a>
                     </div>
@@ -130,7 +130,7 @@
                         <a class="link" href="">
                             <img src="./images/portfolio6.jpg"
                         alt="Борд на экране монитора" width="368"/>
-                            <h3>Inspiration has no Borders</h3>
+                            <h2>Inspiration has no Borders</h2>
                             <p>Веб-сайт</p>
                         </a>
                     </div>    
@@ -140,7 +140,7 @@
                         <a class="link" href="">
                             <img src="./images/portfolio7.jpg"
                         alt="Буклет" width="368"/>
-                            <h3>Издание Limited Edition</h3>
+                            <h2>Издание Limited Edition</h2>
                             <p>Дизайн</p>
                         </a>
                     </div>
@@ -150,7 +150,7 @@
                         <a class="link" href="">
                             <img src="./images/portfolio8.jpg" 
                         alt="Атрибут с Лого" width="368"/>
-                            <h3>Проект LAB</h3>
+                            <h2>Проект LAB</h2>
                             <p>Маркетинг</p>
                         </a>
                     </div>
@@ -160,7 +160,7 @@
                         <a class="link" href="">
                             <img src="./images/portfolio9.jpg"
                         alt="Демоверсия на экране" width="368"/>
-                            <h3>Growing Business</h3>
+                            <h2>Growing Business</h2>
                             <p>Приложение</p>
                         </a>
                     </div>
